--- a/IFTech 09.10.2019/index.html
+++ b/IFTech 09.10.2019/index.html
@@ -3,18 +3,21 @@
 <head>
 	<title>PROJETO 1</title>
 	<meta charset="utf-8">
+	<!-- BOOSTRAP DA PAGINA -->
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 </head>
 <body>
+	<!-- BARRA DE NAVEGAÇÃO -->
 	<header>
 		<div class="container-fluid bg-primary">
 			<nav class="navbar navbar-expand-md navbar-dark">
 
 				<a href="#" class="navbar-brand">PROJETO 1</a>
-
+				<!--BOTAO QUE MOSTRA MENU SE A TELA FOR PEQUENA -->
 				<button class="navbar-toggler" aria-controls="navegacao" data-toggle="collapse" data-target="#navegacao">
 					<span class="navbar-toggler-icon"></span>
 				</button>
+				<!-- MENU -->
 				<div class="navbar-collapse collapse" id="navegacao">	
 					<ul class="navbar-nav ml-auto">
 						<li class="nav-item">
@@ -31,18 +34,37 @@
 						</li>
 					</ul>
 				</div>
+				
 			</nav>
 		</div>
 	</header>
 
 	<main>
+		<!-- TITULO 1 -->
 		<div class="row">
 			<div class="col-12">
 				<h1 class="text-dark text-center mt-5 mb-5">Batata 9,99</h1>
 			</div>
 		</div>
+		<!-- CONTAINERS DE IMAGEM -->
+		<div class="container">
+			<div class="row">
+				<!--COLUNA 1 -->
+				<div class="col-sm-12 col-md-8">
+					<div class="row">
+						<div class="col-sm-12 col-md-6 bg-primary">
+							<img class="img-thumbnail" src="1.png" width="400px">
+						</div>
+					</div>
+				</div>
+				<!-- COLUNA 2 -->
+				<div class="col-sm-12 col-md-4">
+					
+				</div>
+			</div>
+		</div>
 	</main>
-
+	<!-- JAVASCRIPT DA PAGINA-->
 	<footer>
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
