--- a/IFTech 09.10.2019/src/index.html
+++ b/IFTech 09.10.2019/src/index.html
@@ -43,7 +43,7 @@
 		<!-- TITULO 1 -->
 		<div class="row">
 			<div class="col-12">
-				<h1 class="text-dark text-center mt-5 mb-5">Batata 9,99</h1>
+				<h1 class="text-dark text-center mt-5 mb-5">Lorem Ipsum Dolor</h1>
 			</div>
 		</div>
 		<!-- CONTAINERS DE IMAGEM -->
@@ -52,8 +52,14 @@
 				<!--COLUNA 1 -->
 				<div class="col-sm-12 col-md-8">
 					<div class="row">
-						<div class="col-sm-12 col-md-6 bg-primary">
-							<img class="img-thumbnail" src="1.png" width="400px">
+						<div class="col-sm-12 col-md-8 bg-primary pt-5 pr-3 pl-3">
+							<div class="col-6 float-left">
+								<img class="img-thumbnail" src="img/1.png" width="400px">
+							</div>
+							<div class="col-6 float-right">
+								<p class="text-white " >Titulo</p>
+								<p class="text-white " >Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad a, quisquam consectetur sed architecto, culpa atque voluptates sunt ipsa aliquam alias labore expedita obcaecati et sequi quibusdam vitae neque numquam.</p>
+							</div>
 						</div>
 					</div>
 				</div>
