added more layout rows

--- a/IFTech 09.10.2019/src/index.html
+++ b/IFTech 09.10.2019/src/index.html
@@ -61,6 +61,27 @@
 								<p class="text-white " >Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad a, quisquam consectetur sed architecto, culpa atque voluptates sunt ipsa aliquam alias labore expedita obcaecati et sequi quibusdam vitae neque numquam.</p>
 							</div>
 						</div>
+						<div class="col-sm-12 col-md-6">
+							<div class="row bg-success">
+								<div class="col-6 float-left pt-4">
+									<img class="img-thumbnail" src="img/1.png" width="400px">
+								</div>
+								<div class="col-6 float-right">
+									<p class="text-white " >Titulo</p>
+									<p class="text-white " >Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad a, quisquam consectetur sed architecto, culpa atque voluptates sunt ipsa aliquam alias labore expedita obcaecati et sequi quibusdam vitae neque numquam.</p>
+								</div>
+							</div>
+								<div class="row bg-danger">
+									<div class="col-6 float-left pt-4">
+											<img class="img-thumbnail" src="img/1.png" width="400px">
+									</div>
+									<div class="col-6 float-right">
+										<p class="text-white " >Titulo</p>
+										<p class="text-white " >Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad a, quisquam consectetur sed architecto, culpa atque voluptates sunt ipsa aliquam alias labore expedita obcaecati et sequi quibusdam vitae neque numquam.</p>
+									</div>
+								</div>
+							</div>
+						</div>
 					</div>
 				</div>
 				<!-- COLUNA 2 -->
